<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        />

    <item
        android:id="@+id/navigation_car"

        android:enabled="true"
        android:icon="@drawable/ic_action_car"
        android:title="@string/title_car"
        android:onClick="Main2Activity"/>

    <item
        android:id="@+id/navigation_expert"
        android:enabled="true"
        android:icon="@drawable/ic_action_exp"
        android:title="@string/title_exp" />
        android:onClick="Main3ActivityHome"/>

    <item
        android:id="@+id/bluetooth"
        android:title="@string/title_BT"
        android:enabled="true"
        android:icon="@drawable/ic_bluetooth"
        android:onClick="actClickBT" />

</menu>
